[gd_scene load_steps=9 format=3 uid="uid://bpgsfslew4pac"]

[ext_resource type="Script" uid="uid://cfj01r0idss7r" path="res://audio_manager.gd" id="1_8qd8g"]
[ext_resource type="AudioStream" uid="uid://c82g5uq8dt5e0" path="res://assets/sfx/background_edited.wav" id="2_m6ggh"]
[ext_resource type="AudioStream" uid="uid://c7g5xmyir8a0a" path="res://assets/sfx/hit.wav" id="3_aoitu"]
[ext_resource type="AudioStream" uid="uid://hbitmcwvqjov" path="res://assets/sfx/laser.wav" id="4_njtn3"]
[ext_resource type="AudioStream" uid="uid://chlkujqglm2n" path="res://assets/sfx/ship_blast.wav" id="5_njtn3"]
[ext_resource type="AudioStream" uid="uid://buwdn4hwbcere" path="res://assets/sfx/rock_smash.wav" id="6_kq7b2"]
[ext_resource type="AudioStream" uid="uid://cwatqxu2oovba" path="res://assets/sfx/collect.wav" id="7_kq7b2"]
[ext_resource type="AudioStream" uid="uid://bfhg374o7u3s7" path="res://assets/sfx/tension-background-short-pixabay-343048.mp3" id="8_02gw7"]

[node name="AudioManager" type="Node2D"]
script = ExtResource("1_8qd8g")

[node name="background_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_m6ggh")

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_aoitu")

[node name="shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_njtn3")

[node name="ship_blast" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_njtn3")
volume_db = 10.0

[node name="rock_smash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_kq7b2")
volume_db = 10.0

[node name="collect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_kq7b2")
volume_db = 10.0

[node name="main_menu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_02gw7")
volume_db = 10.0
